# cohort_matching

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  README.md
benches/: balance_stats.rs  distance_channels.rs
src/: compat.rs  lib.rs  test_utils.rs
src/balance/: diagnostics.rs  mod.rs  projected.rs  report.rs  stats.rs
src/constraints/: mod.rs
src/matching/: constraints.rs  distance.rs  engine.rs  estimation.rs  index.rs  job.rs  mod.rs  ratio.rs  reconstructed.rs  records.rs  selection.rs  subclassification.rs  weights.rs
src/reporting/: mod.rs
src/role_transition/: algorithm.rs  mod.rs
src/types/: core.rs  domain.rs  mod.rs
tests/: compile_fail.rs  invariants.rs
tests/ui/: standard_request_rejects_vec_boxed_constraints.rs  standard_request_rejects_vec_boxed_constraints.stderr  transition_request_rejects_vec_boxed_constraints.rs  transition_request_rejects_vec_boxed_constraints.stderr  with_age_limit_requires_typed_years.rs  with_age_limit_requires_typed_years.stderr  with_birth_window_requires_typed_days.rs  with_birth_window_requires_typed_days.stderr  with_ratio_requires_match_ratio.rs  with_ratio_requires_match_ratio.stderr
